# sde-assignment-2025

./: .gitignore  ASSIGNMENT.md  ASSIGNMENT_REVIEW.md  CODE_QUALITY_FINDINGS.md  LICENSE  README.md  README.txt  SIMULATION_REPORT.md  STARTER_CODE_SUMMARY.md  generate_sphere.py
starter_code/part1_cpp/: CMakeLists.txt
starter_code/part1_cpp/include/: lscm.h  math_utils.h  mesh.h  topology.h  unwrap.h
starter_code/part1_cpp/reference/: algorithms.md  lscm_math.md  lscm_matrix_example.cpp  topology_example.cpp
starter_code/part1_cpp/src/: lscm.cpp  math_utils.cpp  mesh_io.cpp  packing.cpp  seam_detection.cpp  topology.cpp  unwrap.cpp
starter_code/part1_cpp/tests/: test_unwrap.cpp
starter_code/part2_python/: cli.py  requirements.txt
starter_code/part2_python/reference/: cli_examples.txt  metrics_example.py  metrics_spec.md  threading_guide.md
starter_code/part2_python/uvwrap/: bindings.py  metrics.py  optimizer.py  processor.py
